# Snifer

./: .gitignore  CMakeLists.txt  README.md
include/: sniffer.h
src/: CMakeLists.txt  main.cpp  sniffer.cpp
tests/: CMakeLists.txt  test_sniffer.cpp
